--- a/style.css
+++ b/style.css
@@ -1,31 +1,30 @@
 *{
-    margin: auto;
     background-color: lightgray;
     font-family: sans-serif;
 }
 
 .contenido{
-    margin: 100px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     background-color: whitesmoke;
-    width: 20%;
-    height: 60%;
+    width: 300px;
+    height: 400px;
     border-radius: 25px 25px 70px 25px;
-}
-
-.fecha{
-    background-color: whitesmoke;
-    padding: 30px 5px;
-    display: inline-block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
 }
 
 label, input{
-    display: block;
     background-color: whitesmoke;
 }
 
 label{
     color: gray;
-    text-align: left;
     font-size: 13px;
     font-weight: bold;
 }
@@ -40,19 +39,35 @@ input{
     font-weight: bold;
 }
 
-.separador{
-    margin: 30px 30px 50px 30px;
+.anio, .mes, .dia{
+    display: flex;
+    flex-direction: column;
     background-color: whitesmoke;
-    height: 2px;
+}
+
+.fecha{
+    display: flex;
+    background-color: whitesmoke;
+    gap: 20px;
+}
+
+.separador{
+    margin: 50px;
+    background-color: whitesmoke;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .linea{
-    border: 1px solid lightgray;
+    border: 2px solid lightgray;
+    width: 80%;
+    position: absolute;
+    top: 165px;
 }
 
 .circulo{
-    position: relative;
-    top: -25px;
+    position: absolute;
     background-color: blueviolet;
     width: 50px;
     height: 50px;
@@ -60,18 +75,16 @@ input{
 }
 
 .flecha{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: relative;
-    top: -58px;
     background: none;
-}
-
-.flecha label{
-    display: inline-block;
 }
 
 .izquierda {
     position: inherit;
-    left: 5px;
+    left: 1px;
     border-right: 1px solid white;
     border-top: 1px solid white; 
     border-radius: 0 70% 0 0;
@@ -82,20 +95,26 @@ input{
 
 
 .palo{
+    position: inherit;
     width: 1px;
     height: 20px;
     background-color: white;
+    top: -5px;
 }
 
 .derecha{
     position: inherit;
-    right: 5px;
+    right: 1px;
     border-left: 1px solid white;
     border-top: 1px solid white; 
     border-radius: 70% 0 0 0;
     background: none;
     height: 10px;
     width: 10px;
+}
+
+.izquierda, .derecha{
+    top: 8px;
 }
 
 input::-webkit-inner-spin-button,
@@ -109,11 +128,7 @@ input:focus {
 }
 
 .edad {
-    height: 150px;
-    display: block;
-    text-align: left;
     background: none;
-    padding-left: 30px;
 }
 
 .edad label{
@@ -135,7 +150,5 @@ input:focus {
 .anios,
 .meses,
 .dias {
-    display: inline-flex;
-    text-align: left;
     background: none;
 }
